# second-brain

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  SETUP_CHECKLIST.md  build_this.md  cost.json  diary  diary-daemon  pyproject.toml  pytest.ini  ruff.toml
.github/: copilot-instructions.md
.github/workflows/: test.yml
brain_cli/: __init__.py  cost_commands.py  daemon_commands.py  diary_commands.py  main.py  notes_commands.py  plan_commands.py
brain_core/: analysis.py  azure_openai_client.py  azure_search_client.py  config.py  constants.py  cost_tracker.py  entry_manager.py  llm_analysis.py  llm_client.py  logging_config.py  notes_search_client.py  ollama_client.py  openai_client.py  report_generator.py  scheduler.py  template_generator.py
diary_cli/: main.py
diary_core/: analysis.py  config.py  constants.py  entry_manager.py  llm_analysis.py  llm_client.py  ollama_client.py  template_generator.py
diary_daemon/: main.py  scheduler.py
docs/: COST_TRACKING.md  DIARY.md  ENTRY_FORMAT.md  PHILOSOPHY.md  PLANNING.md
tests/: __init__.py  conftest.py
tests/brain_cli/: __init__.py  test_cli.py
tests/brain_core/: __init__.py  test_config.py  test_entry_manager.py  test_notes_search_client.py  test_template_generator.py
